Mit Colab erstellt

--- a/1.02_ManipulatingDNAStrings-start.ipynb
+++ b/1.02_ManipulatingDNAStrings-start.ipynb
@@ -171,42 +171,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 18,
       "metadata": {
         "id": "lHa39RDXmxUq",
-        "outputId": "8a9a8d72-73b7-43bb-a308-a34d11e2b36c",
+        "outputId": "0c8506b2-44a8-41ff-c692-6f8a2ebce341",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 300
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'map' object is not reversible",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-92c591b7c8d1>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreverseComplement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcomplement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreverseComplement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ACCATTG'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-15-92c591b7c8d1>\u001b[0m in \u001b[0;36mreverseComplement\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Write a function the generates the reverse complement of a given dna string, using the complement dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mreverseComplement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcomplement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreverseComplement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ACCATTG'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'map' object is not reversible"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CAATGGT\n"
           ]
         }
       ],
       "source": [
         "# Write a function the generates the reverse complement of a given dna string, using the complement dictionary\n",
         "def reverseComplement(s):\n",
-        "  return list(map(lambda x: complement[x], s)))\n",
+        "  return \"\".join(map(lambda x: complement[x], reversed(s)))\n",
         "print(reverseComplement('ACCATTG'))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "metadata": {
         "id": "ulxnwqImmxUq",
-        "outputId": "ac9319dc-09fb-4c2c-e080-ab2dfcf7927d",
+        "outputId": "f2e12323-9c6f-43a4-8a00-45e368da5f4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -216,31 +210,23 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "test_notebook (__main__.TestNotebook) ... FAIL\n",
-            "\n",
-            "======================================================================\n",
-            "FAIL: test_notebook (__main__.TestNotebook)\n",
-            "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-13-02576b8723d2>\", line 5, in test_notebook\n",
-            "    self.assertEqual(reverseComplement('ACCATTG'), 'CAATGGT')\n",
-            "AssertionError: ['T', 'G', 'G', 'T', 'A', 'A', 'C'] != 'CAATGGT'\n",
+            "test_notebook (__main__.TestNotebook) ... ok\n",
             "\n",
             "----------------------------------------------------------------------\n",
             "Ran 1 test in 0.007s\n",
             "\n",
-            "FAILED (failures=1)\n"
+            "OK\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.main.TestProgram at 0x790dfcd28640>"
+              "<unittest.main.TestProgram at 0x790dfcdd8e50>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 19
         }
       ],
       "source": [
