Mit Colab erstellt

--- a/1.05_AnalyzingReadsByPosition-start.ipynb
+++ b/1.05_AnalyzingReadsByPosition-start.ipynb
@@ -5,11 +5,11 @@
       "execution_count": 14,
       "metadata": {
         "collapsed": true,
-        "id": "KB1_jb-Xtx_E",
-        "outputId": "f9f8a5aa-c9aa-4d4c-a5a0-f2e0d2af9e03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KB1_jb-Xtx_E",
+        "outputId": "f9f8a5aa-c9aa-4d4c-a5a0-f2e0d2af9e03"
       },
       "outputs": [
         {
@@ -62,13 +62,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 38,
       "metadata": {
-        "id": "-3vQRvtYtx_G",
-        "outputId": "dc60a8dd-3169-4ab1-88d3-bc04920f7060",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-3vQRvtYtx_G",
+        "outputId": "2ac2664e-9026-456d-c0b3-069c5101f3d7"
       },
       "outputs": [
         {
@@ -100,11 +100,11 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
-        "id": "4XFNhpPHtx_G",
-        "outputId": "3c27d7c3-4bb3-4c62-c125-e6661695ebb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4XFNhpPHtx_G",
+        "outputId": "3c27d7c3-4bb3-4c62-c125-e6661695ebb9"
       },
       "outputs": [
         {
@@ -139,12 +139,12 @@
       "cell_type": "code",
       "execution_count": 23,
       "metadata": {
-        "id": "ZCNpiUlTtx_H",
-        "outputId": "f7562619-2871-4fc3-b71f-b2d4ae20270d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 430
-        }
+          "height": 450
+        },
+        "id": "ZCNpiUlTtx_H",
+        "outputId": "f7562619-2871-4fc3-b71f-b2d4ae20270d"
       },
       "outputs": [
         {
@@ -170,12 +170,12 @@
       "cell_type": "code",
       "execution_count": 35,
       "metadata": {
-        "id": "kYnhY17Stx_I",
-        "outputId": "69e25ec6-4d8c-4e28-d4be-bd9965379c33",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 430
-        }
+          "height": 450
+        },
+        "id": "kYnhY17Stx_I",
+        "outputId": "69e25ec6-4d8c-4e28-d4be-bd9965379c33"
       },
       "outputs": [
         {
@@ -225,11 +225,11 @@
       "cell_type": "code",
       "execution_count": 31,
       "metadata": {
-        "id": "0fd0G0REtx_I",
-        "outputId": "4d84469d-d1aa-476d-c220-5d06da699e9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0fd0G0REtx_I",
+        "outputId": "4d84469d-d1aa-476d-c220-5d06da699e9c"
       },
       "outputs": [
         {
@@ -253,26 +253,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 42,
       "metadata": {
-        "id": "2OxrrMO1tx_I",
-        "outputId": "44729791-85ba-41dc-8c0a-3811fe1cd538",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2OxrrMO1tx_I",
+        "outputId": "31e6c462-5ed3-4b3d-e141-e4185672fce4"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '1.05.vars.pkl'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-36-3ca3c55089a2>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpkl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.05.vars.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0m_seqs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_quals\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mpkl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.05.vars2.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '1.05.vars.pkl'"
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "test_notebook (__main__.TestNotebook) ... ok\n",
+            "\n",
+            "----------------------------------------------------------------------\n",
+            "Ran 1 test in 0.007s\n",
+            "\n",
+            "OK\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<unittest.main.TestProgram at 0x7967c853b9a0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
         }
       ],
       "source": [
@@ -287,7 +297,7 @@
         "class TestNotebook(unittest.TestCase):\n",
         "    def test_notebook(self):\n",
         "        self.assertEqual(h, [0, 0, 6178, 0, 0, 54, 108, 574, 345, 83, 193, 124, 79, 165, 49, 236, 184, 327, 514, 238, 531, 254, 313, 798, 992, 888, 1396, 1488, 993, 1752, 3387, 4487, 3248, 5476, 8375, 11814, 4243, 7827, 6579, 8179, 9349, 8180, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-        "        self.assertEqual((_seqs, _quals), readFastq('SRR835775_1.first1000.fastq'))\n",
+        "        self.assertEqual((_seqs, _quals), readFastq('SRR835775_1.first1000.fastq.1'))\n",
         "        self.assertEqual(_gc, gc)\n",
         "        self.assertEqual(_count, count)\n",
         "unittest.main(argv=[''], verbosity=2, exit=False)"
