Mit Colab erstellt

--- a/1.06_NaiveExactMatching-MatchingArtificialReads.ipynb
+++ b/1.06_NaiveExactMatching-MatchingArtificialReads.ipynb
@@ -2,26 +2,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "LXWcG0MWlO3G",
-        "outputId": "f27c26e8-714e-4e04-bf98-38674960024c"
+        "outputId": "c6283823-45d8-4c02-876e-9f3bee2a3217"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "--2017-12-14 11:01:37--  http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/phix.fa\n",
-            "Resolving d28rh4a8wq0iu5.cloudfront.net... 13.32.16.127, 13.32.16.28, 13.32.16.244, ...\n",
-            "Connecting to d28rh4a8wq0iu5.cloudfront.net|13.32.16.127|:80... connected.\n",
+            "--2024-11-18 14:02:47--  http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/phix.fa\n",
+            "Resolving d28rh4a8wq0iu5.cloudfront.net (d28rh4a8wq0iu5.cloudfront.net)... 13.32.192.17, 13.32.192.55, 13.32.192.207, ...\n",
+            "Connecting to d28rh4a8wq0iu5.cloudfront.net (d28rh4a8wq0iu5.cloudfront.net)|13.32.192.17|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5528 (5.4K) [application/octet-stream]\n",
             "Saving to: ‘phix.fa’\n",
             "\n",
-            "phix.fa             100%[===================>]   5.40K  --.-KB/s    in 0s      \n",
+            "\rphix.fa               0%[                    ]       0  --.-KB/s               \rphix.fa             100%[===================>]   5.40K  --.-KB/s    in 0s      \n",
             "\n",
-            "2017-12-14 11:01:37 (264 MB/s) - ‘phix.fa’ saved [5528/5528]\n",
+            "2024-11-18 14:02:47 (533 MB/s) - ‘phix.fa’ saved [5528/5528]\n",
             "\n"
           ]
         }
@@ -48,6 +51,11 @@
         "    rtype: string\n",
         "    \"\"\"\n",
         "    genome = ''\n",
+        "    with open(filename, 'r') as f:\n",
+        "        for line in f:\n",
+        "            # ignore header line with genome information\n",
+        "            if not line[0] == '>':\n",
+        "                genome += line.rstrip()\n",
         "\n",
         "    return genome"
       ]
@@ -68,6 +76,11 @@
         "    returns: list of occurences\n",
         "    \"\"\"\n",
         "    occurrences = []\n",
+        "    for c in p:\n",
+        "      for i in range(len(t) - len(p) + 1):\n",
+        "          if t[i:i+len(p)] == p:\n",
+        "              occurrences.append(i)\n",
+        "              break\n",
         "    return occurrences"
       ]
     },
