Mit Colab erstellt

--- a/1.06_NaiveExactMatching-MatchingArtificialReads.ipynb
+++ b/1.06_NaiveExactMatching-MatchingArtificialReads.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "collapsed": true,
         "id": "WczxyVT-lO3J"
@@ -76,11 +76,14 @@
         "    returns: list of occurences\n",
         "    \"\"\"\n",
         "    occurrences = []\n",
-        "    for c in p:\n",
-        "      for i in range(len(t) - len(p) + 1):\n",
-        "          if t[i:i+len(p)] == p:\n",
-        "              occurrences.append(i)\n",
-        "              break\n",
+        "    for i in range(len(t)):\n",
+        "      match = True\n",
+        "      for j in range(len(p)):\n",
+        "        if t[i+j] != p[j]:\n",
+        "          match = False\n",
+        "          break\n",
+        "      if match:\n",
+        "        occurrences.append(i)\n",
         "    return occurrences"
       ]
     },
@@ -101,7 +104,10 @@
         "    param: readLen defines the length of each read\n",
         "    returns: list containing the generated reads\n",
         "    \"\"\"\n",
-        "    reads = []\n",
+        "    reads = []+\n",
+        "    for _ in range(numReads):\n",
+        "        start = random.randint(0, len(genome)-readLen) - 1\n",
+        "        reads.append(genome[start : start+readLen])\n",
         "\n",
         "    return reads"
       ]
