Mit Colab erstellt

--- a/1.07_NaiveExactMatching-MatchingRealReads.ipynb
+++ b/1.07_NaiveExactMatching-MatchingRealReads.ipynb
@@ -11,18 +11,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "IqwCMig7nVI-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IqwCMig7nVI-",
+        "outputId": "f390f508-7d00-4c92-ec0f-e7121a41a83c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-11-18 14:12:14--  http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/phix.fa\n",
+            "Resolving d28rh4a8wq0iu5.cloudfront.net (d28rh4a8wq0iu5.cloudfront.net)... 13.225.141.205, 13.225.141.118, 13.225.141.46, ...\n",
+            "Connecting to d28rh4a8wq0iu5.cloudfront.net (d28rh4a8wq0iu5.cloudfront.net)|13.225.141.205|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 5528 (5.4K) [application/octet-stream]\n",
+            "Saving to: ‘phix.fa’\n",
+            "\n",
+            "\rphix.fa               0%[                    ]       0  --.-KB/s               \rphix.fa             100%[===================>]   5.40K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2024-11-18 14:12:15 (481 MB/s) - ‘phix.fa’ saved [5528/5528]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "!wget http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/phix.fa"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "VYLML6qLnVI_"
       },
@@ -56,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "OzYkNcBlnVJE"
       },
@@ -69,6 +91,12 @@
         "    rtype: string\n",
         "    \"\"\"\n",
         "    # copy from notebook 1.06\n",
+        "    reads = []\n",
+        "    genome = ''\n",
+        "    with open(filename, 'r') as f:\n",
+        "        for line in f:\n",
+        "            if not line[0] == '>':\n",
+        "                genome += line.rstrip()\n",
         "\n",
         "    return genome"
       ]
